# amman-python-401d7

class-01/demo/: first_program.py
class-01/demo/class-01-topics/: pyproject.toml
class-01/demo/guessing-game/: pyproject.toml
class-02/code_review/: reveres_array.md
class-02/demo/recursion/: README.md
class-03/code_review/math-series/: pyproject.toml
class-03/demo/: unpacking.py
class-03/demo/files-io/: pyproject.toml
class-04/code_review/lab/: madlib.py
class-04/demo/: life_without_classes.py
class-04/demo/pets-world/: pyproject.toml
class-05/: whiteboarding.md
class-05/code_review/: band_review.py  test_pythonic_guarage_band.py
class-06/: big_o.py
class-06/demo/: randomizer.py
class-06/starter_tests/: test_banker.py
class-07/code_review/: code_challenge.md  lab.py
class-07/demo/game-of-greed-v2/: pyproject.toml
class-08/demo/: builtins_demo.py  decorators.py
class-09/code_review/: code_challenge.py  game.py
class-09/lab/: bots.py
class-11/demo/chess-board/: chess_board.ipynb  images.ipynb  numpy_intro.ipynb  pyproject.toml
class-12/code_review/: pseudo_queue.py
class-12/code_review/chess-board/: board.ipynb  pyproject.toml
class-12/demo/covid19-pandas/: country_vaccinations_by_manufacturer.csv  covid19.ipynb  pyproject.toml  vaccine.ipynb  worldwide_covid_data.csv
class-13/code_review/: animals_shelter.py  vg_stats.py
class-13/demo/: notes.md
class-13/demo/salary/: pyproject.toml  salary.ipynb
class-14/code_review/balanced-brackets/: pyproject.toml
class-14/demo/: flights.ipynb
class-15/demo/trees/: pyproject.toml
class-16/: notes.md
class-16/demo/text-classification/: pyproject.toml  text_classifier.ipynb
class-17/code_review/: tree.py
class-17/demo/bayt_scraper/: all_jobs.json  pyproject.toml
class-17/demo/bayt_scraper/bayt_scraper/: scraper.py
class-17/demo/bayt_scraper/tests/: test_bayt_scraper.py
class-18/demo/: fake_text.txt
class-18/demo/fakey/: pyproject.toml
class-26/django-things/: pyproject.toml
class-26/django-things/things/: db.sqlite3
class-27/demo/django_things/: db.sqlite3  pyproject.toml
class-28/demo/: pyproject.toml
class-28/demo/things/: db.sqlite3
class-28/demo/things/my_things/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
class-28/demo/things/my_things/migrations/: 0001_initial.py
class-28/demo/things/templates/: _base.html  thing_confirm_delete.html  thing_create.html  thing_detail.html  thing_list.html  thing_update.html
class-28/demo/things/things/: settings.py  urls.py
class-29/demo/djangoX/: pyproject.toml
class-29/demo/djangoX/accounts/: admin.py  forms.py  models.py
class-29/demo/djangoX/accounts/migrations/: 0002_customuser_phone_number.py
class-29/demo/djangoX/config/: settings.py  urls.py
class-29/demo/djangoX/snacks/: admin.py  models.py  urls.py  views.py
class-29/demo/djangoX/snacks/migrations/: 0001_initial.py
class-29/demo/djangoX/staticfiles/: staticfiles.json
class-29/demo/djangoX/staticfiles/css/: base.5f6d493b54c1.css
class-29/demo/djangoX/templates/: _base.html
class-29/demo/djangoX/templates/account/: login.html
class-29/demo/djangoX/templates/snacks/: snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
class-31/demo/: db.sqlite3  pyproject.toml
class-31/demo/blog/: settings.py  urls.py
class-32/demo/: db.sqlite3  requirements.txt
class-32/demo/blog/: settings.py
class-32/postgres-docker/: docker-compose.yml  pyproject.toml  requirements.txt
class-33/code_challenge/: hash_intersection.md
class-33/demo/: creds.txt  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
class-33/demo/blog/: settings.py  urls.py
class-33/demo/posts/: views.py
class-33/demo/posts/migrations/: 0002_alter_post_updated.py
class-34/code_review/: left_join.py
class-34/demo/: pyproject.toml
class-34/demo/insecure/: db.sqlite3  manage.py
class-34/demo/insecure/insecure/: .env.sample  asgi.py  settings.py  urls.py  wsgi.py
class-34/demo/insecure/things/: models.py
class-34/demo/insecure/things/migrations/: 0001_initial.py
data-structures-and-algorithms/: README.md
(+86 files in other folders)
