[tool.poetry]
name = "text-classification"
version = "0.1.0"
description = ""
authors = ["Ahmad Alawad <ahmad.alawad.sf@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
jupyterlab = "^3.2.4"
matplotlib = "^3.5.0"
pandas = "1.2.1"
sklearn = "^0.0"
keras = "^2.7.0"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
